--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
   <properties>
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
-        <docker.dev.version>3.18.0</docker.dev.version>
-        <spatial.model>1.0.8-SNAPSHOT</spatial.model>
+        <docker.dev.version>3.20.0</docker.dev.version>
+        <spatial.model>1.0.8</spatial.model>
         <reporting.model>1.0.4</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
