common context root path

--- a/deploy-weblogic/pom.xml
+++ b/deploy-weblogic/pom.xml
@@ -119,7 +119,7 @@
                         </jarModule>
                         <webModule>
                             <groupId>${project.groupId}</groupId>
-                            <context-root>${project.parent.artifactId}</context-root>
+                            <context-root>${context.root}${project.parent.artifactId}</context-root>
                             <artifactId>rest</artifactId>
                             <classifier>weblogic</classifier>
                             <bundleDir>/</bundleDir>
