--- a/service/src/main/resources/config.properties
+++ b/service/src/main/resources/config.properties
@@ -7,4 +7,4 @@ usm_deployment_descriptor_force_update=${usm_deployment_descriptor_force_update}
 #Database dialect
 database.dialect=${database.dialect}
 
-context.root=${context.root}
+context.root=unionvms
