--- a/message/pom.xml
+++ b/message/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>1.1.7</version>
+        <version>1.1.8-SNAPSHOT</version>
     </parent>
 
     <dependencies>
