--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>1.1.8</version>
+        <version>1.1.9-SNAPSHOT</version>
     </parent>
     
 	<properties>
