tests work from docker but not from arq

--- a/message/pom.xml
+++ b/message/pom.xml
@@ -30,11 +30,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
             <artifactId>movement-model</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency-->
         
         <dependency>
 			<groupId>org.projectlombok</groupId>
