--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <uvms.commons.version>3.0.22</uvms.commons.version>
         <uvms.test.version>0.0.8</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>4.0.11</usm4uvms.version>
+        <usm4uvms.version>4.0.12</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
@@ -91,12 +91,12 @@
                 <version>${spatial.model}</version>
             </dependency>
         
-        	<dependency>
+        	<!--dependency>
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
                 <artifactId>usm4uvms</artifactId>
                 <version>${usm4uvms.version}</version>
 				<optional>true</optional>
-            </dependency>
+            </dependency-->
             
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
