--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -12,6 +12,27 @@
         <version>1.1.10-SNAPSHOT</version>
     </parent>
 
+    <distributionManagement>
+        <repository>
+            <id>focus-releases</id>
+            <name>UnionVms Repository</name>
+            <url>http://nexus.focus.fish/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>focus-snapshots</id>
+            <name>UnionVms Snapshot Repository</name>
+            <url>http://nexus.focus.fish/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>focus-repo</id>
+            <name>Focus nexus repository</name>
+            <url>http://nexus.focus.fish/nexus/</url>
+        </repository>
+    </repositories>
+
     <profiles>
 
         <profile>
