System names of some modules missing in system monitor

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -48,6 +48,11 @@
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
+            <artifactId>uvms-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>usm4uvms</artifactId>
             <version>${usm4uvms.version}</version>
             <exclusions>
