--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
     <packaging>pom</packaging>
     <description>Maven project-archetype for UnionVms modules</description>
 
-
   <properties>
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
@@ -45,6 +44,7 @@
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
         <javaee.version>7.0</javaee.version>
         <mapstruct.version>1.2.0.Final</mapstruct.version>
+        <uvms.config.version>4.0.1</uvms.config.version>
         <database.dialect>postgres</database.dialect>
         <scm.connection>scm:git:https://github.com/UnionVMS/UVMS-SpatialModule-APP.git</scm.connection>
 
@@ -65,6 +65,18 @@
 				<version>1.18</version>
 				<type>pom</type>
 			</dependency>
+
+            <dependency>
+                <groupId>eu.europa.ec.fisheries.uvms</groupId>
+                <artifactId>uvms-config</artifactId>
+                <version>${uvms.config.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>eu.europa.ec.fisheries.uvms</groupId>
+                        <artifactId>uvms-commons</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -91,7 +103,7 @@
                 <version>${spatial.model}</version>
             </dependency>
 
-            
+
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
