--- a/service/pom.xml
+++ b/service/pom.xml
@@ -48,7 +48,7 @@
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-config</artifactId>
+            <artifactId>config-library</artifactId>
         </dependency>
 
         <dependency>
