--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -46,6 +46,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>service</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
