[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
     <artifactId>spatial-db</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -54,7 +54,7 @@
 
     <scm>
         <connection>${scm.connection}</connection>
-        <tag>spatial-db-1.0.6</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
