--- a/rest/src/main/webapp/WEB-INF/web.xml
+++ b/rest/src/main/webapp/WEB-INF/web.xml
@@ -54,8 +54,27 @@
         <filter-name>AuthorizationFilter</filter-name>
         <url-pattern>/rest/*</url-pattern>
     </filter-mapping>
+
+    <filter>
+        <filter-name>MDCFilter</filter-name>
+        <filter-class>eu.europa.ec.fisheries.uvms.commons.rest.filter.MDCFilter</filter-class>
+        <async-supported>true</async-supported>
+    </filter>
+    <filter-mapping>
+        <filter-name>MDCFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
     <context-param>
         <param-name>usmApplication</param-name>
         <param-value>Spatial</param-value>
     </context-param>
+
+
+
+
+
+
 </web-app>
